FEAT: implement adapter for QRules (#107)
* DOC: build all models with QRules
* DOC: generate J/psi decay figure with QRules
* DOC: relabel QRules final state IDs to 1,2,3
* ENH: make `ThreeBodyDecay` sortable
* FEAT: implement `convert_edges_and_nodes()`
* FEAT: implement `filter_min_ls()`
* FEAT: implement `load_particles()`
* FEAT: implement `to_three_body_decay()`
* FEAT: make `get_particle()` public
* FEAT: support decays without LS
* MAINT: capitalize QRules `REACTION` variables

--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# J/ψ → π⁰ π⁺ π⁻\n",
     "\n",
@@ -31,12 +33,11 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "import itertools\n",
     "import logging\n",
     "import os\n",
     "import warnings\n",
     "from textwrap import dedent\n",
-    "from typing import TYPE_CHECKING, Iterable\n",
+    "from typing import TYPE_CHECKING\n",
     "\n",
     "import ampform\n",
     "import graphviz\n",
@@ -45,9 +46,10 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
+    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
-    "from IPython.display import SVG, Latex, Markdown, clear_output, display\n",
+    "from IPython.display import Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
     "    Accordion,\n",
     "    Checkbox,\n",
@@ -65,7 +67,8 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
+    "from ampform_dpd.adapter.qrules import to_three_body_decay\n",
+    "from ampform_dpd.decay import Particle\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
     "    aslatex,\n",
@@ -73,7 +76,6 @@
     "    perform_cached_lambdify,\n",
     "    simplify_latex_rendering,\n",
     ")\n",
-    "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "if TYPE_CHECKING:\n",
     "    from ampform.helicity import HelicityModel\n",
@@ -104,47 +106,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "mystnb": {
-     "code_prompt_show": "Define initial and final state"
-    },
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "PDG = qrules.load_pdg()\n",
-    "PARTICLE_DB = {\n",
-    "    p.name: Particle(\n",
-    "        name=p.name,\n",
-    "        latex=p.latex,\n",
-    "        spin=p.spin,\n",
-    "        parity=int(p.parity),\n",
-    "        mass=p.mass,\n",
-    "        width=p.width,\n",
-    "    )\n",
-    "    for p in PDG\n",
-    "    if p.parity is not None\n",
-    "}\n",
-    "INITIAL_STATE = PARTICLE_DB[\"J/psi(1S)\"]\n",
-    "FS_zero = PARTICLE_DB[\"pi0\"]\n",
-    "FS_neg = PARTICLE_DB[\"pi-\"]\n",
-    "FS_pos = PARTICLE_DB[\"pi+\"]\n",
-    "PARTICLE_TO_ID = {INITIAL_STATE: 0, FS_zero: 1, FS_neg: 2, FS_pos: 3}\n",
-    "_, *FINAL_STATE = PARTICLE_TO_ID\n",
-    "Markdown(as_markdown_table(list(PARTICLE_TO_ID)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "mystnb": {
      "code_prompt_show": "Generate transitions"
     },
@@ -154,14 +115,15 @@
    },
    "outputs": [],
    "source": [
-    "reaction = qrules.generate_transitions(\n",
-    "    initial_state=INITIAL_STATE.name,\n",
-    "    final_state=[p.name for p in FINAL_STATE],\n",
+    "REACTION = qrules.generate_transitions(\n",
+    "    initial_state=\"J/psi(1S)\",\n",
+    "    final_state=[\"pi0\", \"pi-\", \"pi+\"],\n",
     "    allowed_intermediate_particles=[\"a(0)(980)\", \"rho(770)\"],\n",
     "    mass_conservation_factor=0,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "dot = qrules.io.asdot(reaction, collapse_graphs=True)\n",
+    "REACTION123 = relabel_edge_ids(REACTION)\n",
+    "dot = qrules.io.asdot(REACTION123, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
   },
@@ -178,12 +140,28 @@
    },
    "outputs": [],
    "source": [
-    "qrules_resonances = sorted(\n",
-    "    reaction.get_intermediate_particles(),\n",
-    "    key=lambda p: (p.charge, p.mass, p.name),\n",
+    "DECAY = to_three_body_decay(REACTION123.transitions, min_ls=True)\n",
+    "Markdown(as_markdown_table([DECAY.initial_state, *DECAY.final_state.values()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "resonances = sorted(\n",
+    "    {t.resonance for t in DECAY.chains},\n",
+    "    key=lambda p: (p.name[0], p.mass),\n",
     ")\n",
-    "resonance_names = [p.name for p in qrules_resonances]\n",
-    "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
+    "resonance_names = [p.name for p in resonances]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
   },
@@ -195,84 +173,11 @@
      "source_hidden": true
     },
     "tags": [
-     "hide-input",
-     "scroll-input"
+     "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "def load_three_body_decay(\n",
-    "    resonance_names: Iterable[str],\n",
-    "    particle_definitions: dict[str, Particle],\n",
-    "    min_ls: bool = True,\n",
-    ") -> ThreeBodyDecay:\n",
-    "    _resonances = [particle_definitions[name] for name in resonance_names]\n",
-    "    chains: list[ThreeBodyDecayChain] = []\n",
-    "    for res in _resonances:\n",
-    "        chains.extend(_create_isobar(res, min_ls))\n",
-    "    return ThreeBodyDecay(\n",
-    "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
-    "        chains=tuple(chains),\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _create_isobar(resonance: Particle, min_ls: bool) -> list[ThreeBodyDecayChain]:\n",
-    "    if resonance.name.endswith(\"-\"):\n",
-    "        child1, child2, spectator = FS_zero, FS_neg, FS_pos\n",
-    "    elif resonance.name.endswith(\"+\"):\n",
-    "        child1, child2, spectator = FS_pos, FS_zero, FS_neg\n",
-    "    else:\n",
-    "        child1, child2, spectator = FS_neg, FS_pos, FS_zero\n",
-    "    prod_ls_couplings = _generate_ls(\n",
-    "        INITIAL_STATE, resonance, spectator, conserve_parity=False\n",
-    "    )\n",
-    "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
-    "    if min_ls:\n",
-    "        decay = IsobarNode(\n",
-    "            parent=INITIAL_STATE,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=min(dec_ls_couplings),\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=min(prod_ls_couplings),\n",
-    "        )\n",
-    "        return [ThreeBodyDecayChain(decay)]\n",
-    "    chains = []\n",
-    "    for dec_ls, prod_ls in itertools.product(dec_ls_couplings, prod_ls_couplings):\n",
-    "        decay = IsobarNode(\n",
-    "            parent=INITIAL_STATE,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=dec_ls,\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=prod_ls,\n",
-    "        )\n",
-    "        chains.append(ThreeBodyDecayChain(decay))\n",
-    "    return chains\n",
-    "\n",
-    "\n",
-    "def _generate_ls(\n",
-    "    parent: Particle, child1: Particle, child2: Particle, conserve_parity: bool\n",
-    ") -> list[tuple[int, sp.Rational]]:\n",
-    "    ls = generate_ls_couplings(parent.spin, child1.spin, child2.spin)\n",
-    "    if conserve_parity:\n",
-    "        return filter_parity_violating_ls(\n",
-    "            ls, parent.parity, child1.parity, child2.parity\n",
-    "        )\n",
-    "    return ls\n",
-    "\n",
-    "\n",
-    "DECAY = load_three_body_decay(\n",
-    "    resonance_names,\n",
-    "    particle_definitions=PARTICLE_DB,\n",
-    "    min_ls=True,\n",
-    ")\n",
     "Latex(aslatex(DECAY, with_jp=True))"
    ]
   },
@@ -310,8 +215,9 @@
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
-    "dpd_model = model_builder.formulate(reference_subsystem=1)\n",
-    "dpd_model.intensity"
+    "DPD_MODEL = model_builder.formulate(reference_subsystem=1)\n",
+    "del model_builder\n",
+    "DPD_MODEL.intensity.cleanup()"
    ]
   },
   {
@@ -328,12 +234,14 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(dpd_model.amplitudes))"
+    "Latex(aslatex(DPD_MODEL.amplitudes))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "There is an isobar Wigner-$d$ function, which takes the following helicity angles as argument:"
    ]
@@ -351,7 +259,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(dpd_model.variables))"
+    "Latex(aslatex(DPD_MODEL.variables))"
    ]
   },
   {
@@ -368,10 +276,11 @@
    "outputs": [],
    "source": [
     "masses = {\n",
-    "    sp.Symbol(f\"m{i}\", nonnegative=True): round(p.mass, 7)\n",
-    "    for p, i in PARTICLE_TO_ID.items()\n",
+    "    symbol: sp.sympify(value)\n",
+    "    for symbol, value in DPD_MODEL.parameter_defaults.items()\n",
+    "    if symbol.name.startswith(\"m\")\n",
+    "    if len(symbol.name) == 2\n",
     "}\n",
-    "dpd_model.parameter_defaults.update(masses)\n",
     "Latex(aslatex(masses))"
    ]
   },
@@ -398,10 +307,12 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = ampform.get_builder(reaction)\n",
+    "model_builder = ampform.get_builder(REACTION)\n",
     "model_builder.use_helicity_couplings = False\n",
-    "ampform_model = model_builder.formulate()\n",
-    "ampform_model.intensity"
+    "model_builder.config.scalar_initial_state_mass = True\n",
+    "model_builder.config.stable_final_state_ids = [0, 1, 2]\n",
+    "AMPFORM_MODEL = model_builder.formulate()\n",
+    "AMPFORM_MODEL.intensity"
    ]
   },
   {
@@ -418,7 +329,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(ampform_model.amplitudes))"
+    "Latex(aslatex(AMPFORM_MODEL.amplitudes))"
    ]
   },
   {
@@ -434,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(ampform_model.kinematic_variables))"
+    "Latex(aslatex(AMPFORM_MODEL.kinematic_variables))"
    ]
   },
   {
@@ -451,6 +362,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "mystnb": {
      "code_prompt_show": "Formulate kinematic variables in terms of four-momenta"
     },
@@ -463,6 +377,7 @@
     "p1, p2, p3 = tuple(FourMomentumSymbol(f\"p{i}\", shape=[]) for i in (0, 1, 2))\n",
     "s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
     "mass_definitions = {\n",
+    "    **masses,\n",
     "    s1: InvariantMass(p2 + p3) ** 2,\n",
     "    s2: InvariantMass(p1 + p3) ** 2,\n",
     "    s3: InvariantMass(p1 + p2) ** 2,\n",
@@ -471,16 +386,13 @@
     "    sp.Symbol(\"m_12\", nonnegative=True): InvariantMass(p2 + p3),\n",
     "}\n",
     "dpd_variables = {\n",
-    "    sp.Symbol(f\"m{i}\", nonnegative=True): sp.Float(p.mass)\n",
-    "    for i, p in enumerate(PARTICLE_TO_ID)\n",
+    "    symbol: expr.doit().xreplace(DPD_MODEL.variables).xreplace(mass_definitions)\n",
+    "    for symbol, expr in DPD_MODEL.variables.items()\n",
     "}\n",
-    "for symbol, expr in dpd_model.variables.items():\n",
-    "    expr = expr.doit().xreplace(mass_definitions).xreplace(dpd_variables)\n",
-    "    dpd_variables[symbol] = expr\n",
     "dpd_transformer = SympyDataTransformer.from_sympy(dpd_variables, backend=\"jax\")\n",
     "\n",
     "ampform_transformer = SympyDataTransformer.from_sympy(\n",
-    "    ampform_model.kinematic_variables, backend=\"jax\"\n",
+    "    AMPFORM_MODEL.kinematic_variables, backend=\"jax\"\n",
     ")"
    ]
   },
@@ -501,7 +413,7 @@
     "    return phsp_generator.generate(size, rng)\n",
     "\n",
     "\n",
-    "phsp = generate_phase_space(ampform_model.reaction_info, size=100_000)\n",
+    "phsp = generate_phase_space(AMPFORM_MODEL.reaction_info, size=100_000)\n",
     "ampform_phsp = ampform_transformer(phsp)\n",
     "dpd_phsp = dpd_transformer(phsp)"
    ]
@@ -532,8 +444,8 @@
     "    return unfolded_intensity.xreplace(unfolded_amplitudes)\n",
     "\n",
     "\n",
-    "ampform_intensity_expr = unfold_intensity(ampform_model)\n",
-    "dpd_intensity_expr = unfold_intensity(dpd_model)"
+    "ampform_intensity_expr = unfold_intensity(AMPFORM_MODEL)\n",
+    "dpd_intensity_expr = unfold_intensity(DPD_MODEL)"
    ]
   },
   {
@@ -546,11 +458,11 @@
    "source": [
     "ampform_func = perform_cached_lambdify(\n",
     "    ampform_intensity_expr,\n",
-    "    parameters=ampform_model.parameter_defaults,\n",
+    "    parameters=AMPFORM_MODEL.parameter_defaults,\n",
     ")\n",
     "dpd_func = perform_cached_lambdify(\n",
     "    dpd_intensity_expr,\n",
-    "    parameters=dpd_model.parameter_defaults,\n",
+    "    parameters=DPD_MODEL.parameter_defaults,\n",
     ")"
    ]
   },
@@ -624,8 +536,8 @@
    "outputs": [],
    "source": [
     "def create_sliders() -> dict[str, ToggleButtons]:\n",
-    "    all_parameters = dict(ampform_model.parameter_defaults.items())\n",
-    "    all_parameters.update(dpd_model.parameter_defaults)\n",
+    "    all_parameters = dict(AMPFORM_MODEL.parameter_defaults.items())\n",
+    "    all_parameters.update(DPD_MODEL.parameter_defaults)\n",
     "    sliders = {}\n",
     "    for symbol, value in all_parameters.items():\n",
     "        value = \"+1\"\n",
@@ -710,6 +622,7 @@
      "code_prompt_show": "Generate comparison widget"
     },
     "tags": [
+     "full-width",
      "hide-input",
      "scroll-input"
     ]
@@ -726,17 +639,18 @@
     "    (ax_s1, ax_s2, ax_s3),\n",
     "    (ax_t1, ax_t2, ax_t3),\n",
     ") = axes\n",
-    "final_state = ampform_model.reaction_info.final_state\n",
     "for ax in axes[:, 0].flatten():\n",
     "    ax.set_ylabel(\"Intensity (a.u.)\")\n",
     "for ax in axes[:, 1:].flatten():\n",
     "    ax.set_yticks([])\n",
-    "ax_s1.set_xlabel(f\"$m({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax_s2.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax_s3.set_xlabel(f\"$m({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
-    "ax_t1.set_xlabel(Rf\"$\\theta({FINAL_STATE[1].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax_t2.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[2].latex})$\")\n",
-    "ax_t3.set_xlabel(Rf\"$\\theta({FINAL_STATE[0].latex}, {FINAL_STATE[1].latex})$\")\n",
+    "\n",
+    "final_state = DECAY.final_state\n",
+    "ax_s1.set_xlabel(f\"$m({final_state[2].latex}, {final_state[3].latex})$\")\n",
+    "ax_s2.set_xlabel(f\"$m({final_state[1].latex}, {final_state[3].latex})$\")\n",
+    "ax_s3.set_xlabel(f\"$m({final_state[1].latex}, {final_state[2].latex})$\")\n",
+    "ax_t1.set_xlabel(Rf\"$\\theta({final_state[2].latex}, {final_state[3].latex})$\")\n",
+    "ax_t2.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[3].latex})$\")\n",
+    "ax_t3.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[2].latex})$\")\n",
     "fig.suptitle(f'Selected resonances: ${\", \".join(resonance_selector.value)}$')\n",
     "fig.tight_layout()\n",
     "\n",
@@ -931,13 +845,13 @@
     "            ampform_expr = _simplify(\n",
     "                ampform_intensity_expr,\n",
     "                ampform_pars,\n",
-    "                ampform_model.kinematic_variables,\n",
+    "                AMPFORM_MODEL.kinematic_variables,\n",
     "                selected_resonances,\n",
     "            )\n",
     "            dpd_expr = _simplify(\n",
     "                dpd_intensity_expr,\n",
     "                dpd_pars,\n",
-    "                dpd_model.variables,\n",
+    "                DPD_MODEL.variables,\n",
     "                selected_resonances,\n",
     "            )\n",
     "        else:\n",
@@ -964,26 +878,6 @@
     ")\n",
     "display(output, ui)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": [
-     "remove-input",
-     "full-width"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "if NO_TQDM:\n",
-    "    filename = \"jpsi2pipipi-comparison.svg\"\n",
-    "    plt.savefig(filename)\n",
-    "    display(SVG(filename))"
-   ]
   }
  ],
  "metadata": {
@@ -1005,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
