FEAT: import `relabel_edge_ids` from `ampform`

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -46,7 +46,6 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import Latex, Markdown, clear_output, display\n",
@@ -67,7 +66,7 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
-    "from ampform_dpd.adapter.qrules import to_three_body_decay\n",
+    "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import Particle\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
@@ -122,7 +121,7 @@
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "REACTION123 = relabel_edge_ids(REACTION)\n",
+    "REACTION123 = normalize_state_ids(REACTION)\n",
     "dot = qrules.io.asdot(REACTION123, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
