--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -39,7 +39,6 @@
     "import qrules\n",
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth, formulate_form_factor\n",
-    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from ampform.kinematics.phasespace import compute_third_mandelstam\n",
     "from ampform.sympy import perform_cached_doit, unevaluated\n",
     "from IPython.display import Latex, Markdown\n",
@@ -47,7 +46,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
-    "from ampform_dpd.adapter.qrules import to_three_body_decay\n",
+    "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
@@ -101,7 +100,7 @@
     "    formalism=\"canonical-helicity\",\n",
     "    mass_conservation_factor=0.05,\n",
     ")\n",
-    "REACTION = relabel_edge_ids(REACTION)\n",
+    "REACTION = normalize_state_ids(REACTION)\n",
     "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
