--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -31,11 +31,14 @@
     "import graphviz\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
-    "from ampform_dpd.adapter.qrules import load_particles, to_three_body_decay\n",
+    "from ampform_dpd.adapter.qrules import (\n",
+    "    load_particles,\n",
+    "    normalize_state_ids,\n",
+    "    to_three_body_decay,\n",
+    ")\n",
     "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import BreitWignerMinL\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, simplify_latex_rendering\n",
@@ -90,7 +93,7 @@
     "STM.set_allowed_interaction_types([qrules.InteractionType.STRONG], node_id=1)\n",
     "problem_sets = STM.create_problem_sets()\n",
     "REACTION = STM.find_solutions(problem_sets)\n",
-    "REACTION = relabel_edge_ids(REACTION)\n",
+    "REACTION = normalize_state_ids(REACTION)\n",
     "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
